--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "idseq-dedup"
 version = "0.1.0"
 authors = ["morsecodist <todd@morsecodist.io>"]
+description = "Deduplicates reads from FASTA and FASTQ files"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
