--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,8 +2,6 @@ name: Rust
 
 on:
   push:
-  release:
-    types: [created]
 
 env:
   CARGO_TERM_COLOR: always
@@ -26,13 +24,13 @@ jobs:
         RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
         RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
     - uses: actions-rs/grcov@v0.1
-      if: ${{ github.event_name != 'release' }}
+      if: ${{ !startsWith(github.ref, 'refs/tag') }}
     - uses: codecov/codecov-action@v1
 
   release:
     name: Release
     runs-on: ${{ matrix.os }}
-    if: ${{ github.event_name == 'release' }}
+    if: ${{ startsWith(github.ref, 'refs/tag') }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
