--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: CICD
 
 on:
   push:
@@ -7,25 +7,47 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  check:
     name: Check
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Install Nightly Toolchain
+      uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly
+        components: rustfmt, clippy
         override: true
-    - uses: actions-rs/cargo@v1
+    - name: Format
+      uses: actions-rs/cargo@v1
+      with:
+          command: fmt
+    - name: Fail not unformatted
+      run: git diff --exit-code
+    - name: Check
+      uses: actions-rs/cargo@v1
+      with:
+          command: check
+    - name: Clippy Check
+      uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features
+    - name: Test
+      uses: actions-rs/cargo@v1
       with:
         command: test
       env:
         CARGO_INCREMENTAL: '0'
         RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
         RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
-    - uses: actions-rs/grcov@v0.1
+    - name: Generate Coverage
+      uses: actions-rs/grcov@v0.1
       if: ${{ !startsWith(github.ref, 'refs/tag') }}
-    - uses: codecov/codecov-action@v1
+    - name: Upload Coverage
+      uses: codecov/codecov-action@v1
+      if: ${{ !startsWith(github.ref, 'refs/tag') }}
 
   release:
     name: Release
@@ -35,10 +57,11 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Build
       run: cargo build --release --locked
-    - name: Upload binaries to release
+    - name: Upload binaries
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
