--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -51,6 +51,7 @@ jobs:
 
   release:
     name: Release
+    needs: check
     runs-on: ${{ matrix.os }}
     if: ${{ startsWith(github.ref, 'refs/tag') }}
     strategy:
@@ -61,9 +62,6 @@ jobs:
       uses: actions/checkout@v2
     - name: Build
       run: cargo build --release --locked
-    - name: Make Executable
-      if: ${{ matrix.os != 'windows-latest' }}
-      run: chmod +x target/release/idseq-dedup
     - name: Upload binaries
       uses: svenstaro/upload-release-action@v2
       with:
