--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,8 +66,8 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: target/release/idseq-dedup${{ matrix.os == 'windows-latest' && '.exe' || '' }}
-        asset_name: idseq-dedup-${{ runner.os }}
+        file: target/release/czid-dedup${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+        asset_name: czid-dedup-${{ runner.os }}
         tag: ${{ github.ref }}
         overwrite: true
 
